--- a/my_store_stacked/pubspec.yaml
+++ b/my_store_stacked/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   stacked: ^3.4.1+1
   stacked_services: ^1.3.0
+  flutter_svg: ^2.0.9
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
+  firebase_auth: ^4.15.3
+  firebase_storage: ^11.5.6
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
